# mntpack

./: Cargo.toml  GUIDE.md  README.md  RELEASE_NOTES.md  release_note.md
.github/workflows/: build-installer.yml
mntpack-installer/: Cargo.toml  build.rs
mntpack-installer/src/: main.rs
src/: binary_cache.rs  build_recipe.rs  cli.rs  config.rs  dotnet.rs  main.rs  nuget.rs
src/commands/: build.rs  clean.rs  config.rs  doctor.rs  exec.rs  info.rs  inspect.rs  list.rs  lock.rs  mod.rs  nuget.rs  outdated.rs  prebuild.rs  reinstall.rs  remove.rs  run.rs  search.rs  sync.rs  update.rs  upgrade.rs  use_version.rs  which.rs  why.rs
src/github/: clone.rs  release.rs
src/installer/: cpp.rs  dotnet.rs  driver.rs  generic.rs  manager.rs  mod.rs  node.rs  python.rs  rust.rs
src/package/: dependency_graph.rs  lockfile.rs  manifest.rs  mod.rs  record.rs  store.rs
src/shim/: generator.rs
