[package]
name = "mntpack"
version = "0.3.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
flate2 = "1.1"
git2 = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
walkdir = "2.5"
zip = "2.4"
